--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icone.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Portfolio Higor V.L</title>
   </head>
   <body>
